fix: content overflow

--- a/src/styles/Messenger.scss
+++ b/src/styles/Messenger.scss
@@ -4,12 +4,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 15px;
+  padding: 15px 15px 0;
   background-color: style.$col;
   border-radius: 8px;
   width: 70%;
   position: relative;
-
+  height: 100vh;
   &__info {
     display: flex;
     padding: 0 0 5px;
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    padding: 0 15px 45px;
+    padding: 0 15px 80px;
     gap: 15px;
   }
 
